@@ -1,6 +1,12 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  15 Aug 2006; Roy Marples <uberlord@gentoo.org>:
+
+    Support old gateway variable with iproute2.
+    arpinging of available address can be disabled with
+    modules=( "!arping" )
+
   14 Aug 2006; Roy Marples <uberlord@gentoo.org>:
 
     Only send a process the TERM signal once, #141832
